fix body overflow #2

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -2,7 +2,7 @@ body {
     background: snow;
     max-height: 100vh;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 0;
     margin: 0;
 }
